added offer popup

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <hr />
 
     <a href="#"
+       id="secret-offer"
        class="GAE-click"
        data-gae="conversion.offers.free_secret">Click here to receive a FREE SECRET OFFER</a>
 
@@ -130,6 +131,11 @@
       // ----- demand forecasting
       $('.demandcast').click(function() {
         alert('this feature is coming soon!');
+      });
+
+      // ----- free offer
+      $('#secret-offer').click(function() {
+        alert('you will receive your offer soon!');
       });
 
     });
