added click hook classnames

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <hr />
 
     <a href="#"
+       class="GAE-click"
        data-gae="conversion.offers.free_secret">Click here to receive a FREE SECRET OFFER</a>
 
     <hr />
@@ -45,13 +46,13 @@
     <p>Dean is a seasoned technical guru, entrepreneur, and hacker phenom</p>
     <a href="http://www.linkedin.com/profile/view?id=3165767"
        data-gae="diligence.linkedin.dean" target="_blank"
-       class="GAE">linkedin</a>
+       class="GAE-click">linkedin</a>
     <a href="https://github.com/deanmao"
        data-gae="diligence.github.dean"
-       class="GAE">github</a>
+       class="GAE-click">github</a>
     <a href="http://twitter.com/#!/deanmao"
        data-gae="diligence.twitter.dean"
-       class="GAE">twitter</a>
+       class="GAE-click">twitter</a>
 
     <hr />
 
@@ -61,10 +62,10 @@
       without breaking a sweat</p>
     <a href="http://www.linkedin.com/profile/view?id=7904039"
        data-gae="diligence.linkedin.austin"
-       class="GAE">linkedin</a>
+       class="GAE-click">linkedin</a>
     <a href="https://github.com/austinchau"
        data-gae="diligence.github.austin"
-       class="GAE">github</a>
+       class="GAE-click">github</a>
 
     <hr />
 
@@ -73,16 +74,16 @@
     <p>Doug creates product experiences with exacting detail and joy</p>
     <a href="http://www.linkedin.com/profile/view?id=44109758"
        data-gae="diligence.linkedin.doug"
-       class="GAE">linkedin</a>
+       class="GAE-click">linkedin</a>
     <a href="https://github.com/duggi"
        data-gae="diligence.github.doug"
-       class="GAE">github</a>
+       class="GAE-click">github</a>
     <a href="http://twitter.com/#!/duggiwuggi"
        data-gae="diligence.twitter.doug"
-       class="GAE">twitter</a>
+       class="GAE-click">twitter</a>
     <a href="http://dribbble.com/duggiwuggi"
        data-gae="diligence.dribbble.doug"
-       class="GAE">dribbble</a>
+       class="GAE-click">dribbble</a>
 
     <hr />
 
